2003-10-10  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* esound.pc.in: Add missing sound-libs param.
	Fix for Darwin and osf, from Jerry Talkington
	<jtalkington@users.sourceforge.net> 

2003-09-22  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/esd.1.in: Fix a small typo in the man page.

2003-09-03  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* esd.c: (open_listen_socket):
	Fix build when IPv6 is disabled (Soren Jacobsen <snj@pobox.com>)

2003-08-30  Dan Winship  <danw@ximian.com>

	* Makefile.am (AUDIO_BACKENDS): add several missing backends that
	weren't getting disted.

2003-08-11  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in: Release 0.2.31

2003-08-05  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in: Fix compilation on Solaris 8.
	bug #119092.

2003-08-01  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* NEWS:
	* configure.in: Release 0.2.30

2003-08-01  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* esd.c: Add missing prototype.

2003-08-01  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* acconfig.h:
	* configure.in:
	* esd.c:
	* esdlib.c:
	Use inet_pton instead of inet_aton which is a libresolv private symbol.
	Bug #117559, patch from Leena Gunda <leena.gunda@wipro.com>.

2003-08-01  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* esd.c: (set_audio_buffer), (reset_daemon), (clean_exit),
	(esd_server_resume), (main):
	* esd.h:
	* esd_config.c:
	* esdcat.c:
	* esdctl.c: (exit_usage), (main):
	* esddsp.c:
	* esdfile.c:
	* esdlib.c: (esd_get_latency), (esd_send_auth), (esd_lock),
	(esd_unlock), (esd_standby), (esd_resume), (esd_connect_unix),
	(esd_open_sound), (esd_play_stream), (esd_monitor_stream),
	(esd_filter_stream), (esd_record_stream), (esd_sample_cache),
	(esd_confirm_sample_cache), (esd_sample_getid), (esd_sample_free),
	(esd_sample_play), (esd_sample_loop), (esd_sample_stop),
	(esd_sample_kill):
	Code cleanup. Patch from Kjartan Maraas <kmaraas@broadpark.no>.

2003-08-01  Frederic Crozat  <fcrozat@mandrakesoft.com>
